objects/vlocity_cmt__OpportunityLineItemRelationship__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>The action desired for this relationship with values of Add, Delete or Existing. Existing means no change is requested. Add is a request to add the relationship. Delete is a request to remove it.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product Relationship</relationshipLabel>
        <relationshipName>OpportunityLineItemRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityLineItemId__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductRelationshipIdentifier__c</fullName>
        <description>Identifies the Product Relationship that is realized by this Opportunity Product Relationship.</description>
        <label>Product Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelatedAssetReferenceId__c</fullName>
        <description>Identifies the Asset Reference Id of an item or asset that this item is related to. Used instead of RelatedOpportunityLineItemId__c when the related asset is not a line item in this opportunity.</description>
        <externalId>true</externalId>
        <label>Related Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelatedOpportunityLineItemId__c</fullName>
        <externalId>true</externalId>
        <label>Related Opportunity Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipType__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Reassignment</fullName>
                </value>
                <value>
                    <fullName>ReliesOn</fullName>
                </value>
                <value>
                    <fullName>Replaces</fullName>
                    <isActive>false</isActive>
                    <label>Replaces</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Product Relationship</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>